添加文章水印

--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -58,6 +58,7 @@
   border-bottom: 1px solid #dcdcdc;
   padding-top:20px;
   padding-bottom: 40px;
+  position: relative;
 }
 .adviser-case-offer-h4{
   font-size: 16px;
