--- a/views/widget/so_advisor/so_advisor.html
+++ b/views/widget/so_advisor/so_advisor.html
@@ -4,7 +4,7 @@
   <div class="so_advisor_top">
     <a target="_blank" href="{{helper.urlgen(item.id | string)}}"><div class="so_advisor_img" style="background-image: url({{helper.avaterimg(item.id, 'small', 0,item.version)}})"></div></a>
     <div class="so_advisor_top_name">
-      <p class="so_advisor_top_position_name">{{item.realname | shorten(4)}}<img src="../assets/img/1v.png" alt="" class="flag"/><span style="margin-left: 15px;background: #fdf3f2;color: #c13232;padding: 2px 10px;border-radius: 20px">{{ item.dept}}</span></p>
+      <p class="so_advisor_top_position_name">{{item.realname | shorten(4)}}<img src="{{helper.cdnhost}}/assets/img/1v.png" alt="" class="flag"/><span style="margin-left: 15px;background: #fdf3f2;color: #c13232;padding: 2px 10px;border-radius: 20px">{{ item.dept}}</span></p>
       <p class="so_advisor_top_fans"><i><svg class="icon" aria-hidden="true">
         <use xlink:href="#icon-fans"></use>
       </svg></i><span>粉丝</span><em>{{item.fans_count}}</em><i style="margin-left: 20px"><svg class="icon" aria-hidden="true">
