--- a/views/so_adviser.html
+++ b/views/so_adviser.html
@@ -48,9 +48,7 @@
     <div class="dui-layout-con" style="background-color: #fff;">
         <div class="main-left">
             <div class="main-searchbox clearfix">
-                <input type="text" id="search-page" placeholder="请输入搜索关键词" class="search-text"
-                       onfocus="if(this.placeholder == '请输入搜索关键词'){this.value = '';}"
-                       onblur="if(this.value == ''){this.placeholder= '请输入搜索关键词';}" value="{{keyword}}">
+                <input type="text" id="search-page" placeholder="请输入您感兴趣的顾问姓名" class="search-text" value="{{keyword}}">
                 <div class="search-btn" id="searchBtn-page" style="cursor: pointer;"><i class="city-icon iconfont">&#xe60c;</i></div>
             </div>
             <div class="page-search-type" id="page-search-type">
