--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
 </head>
 <body style="background:#f5f5f5;">
+<!--页面标题导航条-->
+{% include "widget/detail_bar/detail_bar.html" %}
   <!-- ===头部=== -->
   {% include "widget/top/top.html" %}
   <!-- ====导航===== -->
