--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -139,7 +139,7 @@
   margin-left: 4px;
 }
 
-.bdshare-button-style0-16 a{
+.page_share_buttons a{
      padding-left:0 !important;
     width: 20px;
     line-height: 20px !important;
@@ -147,19 +147,19 @@
     cursor: pointer;
     margin: 0px 10px 10px 0!important;
 }
-.bdshare-button-style0-16 .wx{
+.page_share_buttons .wx{
   background:url(../img/wx.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
 }
-.bdshare-button-style0-16 .weixin-pengyouquan{
+.page_share_buttons .weixin-pengyouquan{
   background:url(../img/pyq.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
 }
-.bdshare-button-style0-16 .bds_tsina{
+.page_share_buttons .bds_tsina{
   background:url(../img/xl.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
 }
-.bdshare-button-style0-16 .bds_sqq{
+.page_share_buttons .bds_sqq{
   background:url(../img/qq.png) no-repeat 0 0 !important;
   background-size: 20px 20px;
 }
