--- a/views/widget/detail_bar/detail_bar.html
+++ b/views/widget/detail_bar/detail_bar.html
@@ -1,15 +1,15 @@
-<link rel="stylesheet" href="{{helper.cdnhost}}/views/widget/detail_bar/detail_bar.css" >
+<!--<link rel="stylesheet" href="{{helper.cdnhost}}/views/widget/detail_bar/detail_bar.css" >-->
 <div class="detail_bar">
     <div class="detail_bar_in clearfix">
-        <div class="bar_title">文章标题</div>
-        <div class="bar_options clearfix">
-            <div class="bdsharebuttonbox share_buttons">
-                <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+        <div class="bar_title">文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题文章标题</div>
+        <div class="bar_options">
+            <div class="bdsharebuttonbox share_buttons clearfix">
+                <a href="#" class="bds_tsina sina" data-cmd="tsina" title="分享到新浪微博"></a>
                 <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
                 <a href="#" class="bds_qzone space" data-cmd="qzone" title="分享到QQ空间"></a>
             </div>
             <div class="option_buttons">
-                <span>998</span><span>评论</span><a href=""></a>
+                <span class="comments_num">998</span><span class="comment_text">评论</span><a href="" class="iconfont comment_btn">&#xe61c;</a>
             </div>
         </div>
     </div>
