--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -82,7 +82,7 @@
                 {{userinfo.realname}}<i class="adviser-v-i"></i>
               </span>
             </div>
-            <div class="bdsharebuttonbox" style="margin-top: 15px;float:right;">
+            <div class="bdsharebuttonbox page_share_buttons" style="margin-top: 15px;float:right;">
               <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
               <a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>
               <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
@@ -170,6 +170,7 @@
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/article_detail.js"></script>
   <script>
   $(function(){
       $('.banner-box-left .slider').xSlider({
