--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -117,7 +117,7 @@
           <div class="adviser-case-detail-offer" data-img="{{article.article_info.img_info[0]}}" id="get-share-img">
             {{article.article_info.message | safe}}
           </div>
-          <div class="adviser-case-operation-bar clearfix"  style="padding-top: 40px;padding-bottom: 40px;">
+          <div class="adviser-case-operation-bar clearfix"  style="padding-top: 40px;padding-bottom: 40px;" id="to_comments">
             <span style="margin-left: 187px;float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" id="collection">
             {% if article.article_info.user_follow_check %}
               已收藏
