--- a/views/widget/detail_bar/detail_bar.html
+++ b/views/widget/detail_bar/detail_bar.html
@@ -9,7 +9,7 @@
                 <a href="#" class="bds_qzone space" data-cmd="qzone" title="分享到QQ空间"></a>
             </div>
             <div class="option_buttons">
-                <span class="comments_num">998</span><span class="comment_text">评论</span><a href="" class="iconfont comment_btn">&#xe61c;</a>
+                <span class="comments_num">998</span><span class="comment_text">评论</span><a href="#to_comments" class="iconfont comment_btn">&#xe61c;</a>
             </div>
         </div>
     </div>
