--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
 </head>
 <body style="background:#f5f5f5;">
+<!--页面标题导航条-->
+{% include "widget/detail_bar/detail_bar.html" %}
   <!-- ===头部=== -->
  {% include "widget/top/top.html" %}
  <!-- ====导航===== -->
@@ -104,7 +106,7 @@
         <div class="adviser-case-detail-offer" data-img="{{article.article_info.img_info[0]}}" id="get-share-img">
           {{article.article_info.message | safe}}
         </div>
-        <div class="adviser-case-operation-bar clearfix" style="padding-top: 40px;padding-bottom: 40px;">
+        <div class="adviser-case-operation-bar clearfix" style="padding-top: 40px;padding-bottom: 40px;" id="to_comments">
             <span style="margin-left: 187px;float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" id="collection">
             {% if article.article_info.user_follow_check %}
               已收藏
@@ -156,6 +158,7 @@
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/article_detail.js"></script>
 <script>
   $(function(){
       $('.banner-box-left .slider').xSlider({
