detail_bar 评论按钮

--- a/views/widget2/comment/comment.html
+++ b/views/widget2/comment/comment.html
@@ -1,5 +1,5 @@
 
-<div class="saytext-box">
+<div class="saytext-box" id="saytext-box">
   <textarea class="saytext1 saytext" id="saytext"  maxlength="500"></textarea>
   <div class="sub-btn-box clearfix emotion-box">
     <span class="emotion"></span>
