--- a/views/index.html
+++ b/views/index.html
@@ -122,7 +122,7 @@
     </div>
   </div>
 </div>
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_liuxue.html" %}
 {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
 {{ new_nav_first.new_nav_first(tdk,helper) }}
 <div class="main" style="width: 1200px;margin: 0 auto;">
