--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 </div>
-{% include "widget/top/top.html" %}
+{% include "widget/top/top_yimin.html" %}
 {% import "widget/new_nav_first/yimin_nav.html" as yimin_nav %}
 {{ yimin_nav.yimin_nav(tdk,helper) }}
 <div class="main" style="width: 1200px;margin: 0 auto;">
