--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -74,6 +74,7 @@
         }
     }
 </script>
+<script src="http://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
 <script>
     var _hmt = _hmt || [];
     (function() {
