--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -72,9 +72,10 @@
     </ul>
   </div>
 </div>#}
+<script src="http://jesong.jjl.cn/js/jjl.js"></script>
 <script>
   function  openchat_new(jobnum){
-    window.open('http://jesong.jjl.cn/live/chat.dll?c=1&n='+jobnum,'','height=500,width=320,directories=no,location=no,menubar=no,resizeable=no,status=no,toolbar=no,top=100,left=200')
+    openJesongChatByCus(1,jobnum)
   }
 </script>
 {% endmacro %}
