--- a/views/widget/new_slide_yimin/new_slide.html
+++ b/views/widget/new_slide_yimin/new_slide.html
@@ -59,7 +59,7 @@
 </div>
 <script>
   function  openchat(jobnum){
-    window.open('http://jesong.jjl.cn/live/chat.dll?c=1&n='+jobnum,'','height=500,width=320,directories=no,location=no,menubar=no,resizeable=no,status=no,toolbar=no,top=100,left=200')
+    openJesongChatByCus(1,jobnum)
   }
   $('#to_top').click(function(){
     $('html , body').animate({scrollTop: 0},'slow');
@@ -72,5 +72,5 @@
   })
 
 </script>
-</script>
+<script src="http://jesong.jjl.cn/js/jjl.js"></script>
 {% endmacro %}
