--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -33,7 +33,7 @@
 </div>
 <script>
   function  openchat_new(jobnum){
-    window.open('http://jesong.jjl.cn/live/chat.dll?c=1&n='+jobnum,'','height=500,width=320,directories=no,location=no,menubar=no,resizeable=no,status=no,toolbar=no,top=100,left=200')
+    openJesongChatByCus(1,jobnum)
   }
 </script>
 {% endmacro %}
@@ -57,7 +57,7 @@
 </div>
 <script>
   function  openchat_new(jobnum){
-    window.open('http://jesong.jjl.cn/live/chat.dll?c=1&n='+jobnum,'','height=500,width=320,directories=no,location=no,menubar=no,resizeable=no,status=no,toolbar=no,top=100,left=200')
+    openJesongChatByCus(1,jobnum)
   }
 </script>
 {% endmacro %}
