--- a/views/widget/so_advisor/so_advisor.html
+++ b/views/widget/so_advisor/so_advisor.html
@@ -18,7 +18,7 @@
 {% endfor %}
 <script>
     function  openchat_new(jobnum){
-        window.open('http://jesong.jjl.cn/live/chat.dll?c=1&n='+jobnum,'','height=500,width=320,directories=no,location=no,menubar=no,resizeable=no,status=no,toolbar=no,top=100,left=200')
+      openJesongChatByCus(1,jobnum)
     }
 </script>
 
