--- a/views/act_form.html
+++ b/views/act_form.html
@@ -17,11 +17,13 @@
  }
  label{
    font-weight: normal;
+   margin-right: 175px;
+   margin-top: 10px;
  }
 
  input[type="radio"]:checked+label {color: red;}
 
- input[type="radio"] + label:before {
+ .act_form_con input[type="radio"] + label:before {
    content: "\a0"; /*不换行空格*/
    display: inline-block;
    vertical-align: middle;
@@ -36,7 +38,37 @@
 
  }
 
- input[type="radio"]:checked + label:before {
+ .act_form_con input[type="radio"]:checked + label:before {
+   content: "\a0"; /*不换行空格*/
+   display: inline-block;
+   vertical-align: middle;
+   font-size: 18px;
+   width: 10px;
+   height: 9px;
+   margin-right: 10px;
+   border-radius: 50%;
+   border: 1px solid #d31d2c;
+   background-color: #d31d2c;
+   background-clip: content-box;
+   padding: 2px;
+   color: #d31d2c;
+ }
+ .act_form_con_2 input[type="radio"] + label:before {
+   content: "\a0"; /*不换行空格*/
+   display: inline-block;
+   vertical-align: middle;
+   font-size: 18px;
+   width: 14px;
+   height: 14px;
+   margin-right: 10px;
+   border-radius: 50%;
+   border: 1px solid #958c87;
+   font-weight: normal;
+   line-height: 1;
+
+ }
+
+ .act_form_con_2 input[type="radio"]:checked + label:before {
    content: "\a0"; /*不换行空格*/
    display: inline-block;
    vertical-align: middle;
@@ -81,6 +113,14 @@
  .word-num span{
    color: #c13232;
  }
+  .act_form_ing {
+    width: 1180px;
+    height: 40px;
+    background: red;
+    margin-top: 22px;
+  }
+
+
 </style>
 <!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/academy3.css"/>-->
 <script>
@@ -94,20 +134,26 @@
 {{ common_nav.common_nav(tdk,helper) }}
 
 <div class="act_form">
-  <div class="act_form_con">
-    <div>
-      <h1><div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;"></div>建议类型</h1>
-      <div class="act_form_xian"></div>
-    </div>
-
-
-    <input class="wrap-ing" type="radio" name="payMethod" value="1" checked="checked" id="liu"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu">技术相关</label>
-    <input class="wrap-ing" type="radio" name="payMethod" value="2" id="shi"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="shi">市场营销</label>
-    <input class="wrap-ing" type="radio" name="payMethod" value="3" id="chang"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="chang">市场营销</label>
-    <input class="wrap-ing" type="radio" name="payMethod" value="4" id="ying"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="ying">市场营销</label>
-    <input class="wrap-ing" type="radio" name="payMethod" value="5" id="xiao"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="xiao">市场营销</label>
+  <h1>
+    <div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;">
+    </div>建议类型
+  </h1>
+  <div class="act_form_xian"></div>
+  <div class="act_form_con clearfix">
+      <input class="wrap-ing" type="radio" name="payMethod" value="1" checked="checked" id="liu1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu1">技术相关</label>
+      <input class="wrap-ing" type="radio" name="payMethod" value="2" id="liu2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu2">市场营销</label>
+      <input class="wrap-ing" type="radio" name="payMethod" value="3" id="liu3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu3">管理体系</label>
+      <input class="wrap-ing" type="radio" name="payMethod" value="4" id="liu4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu4">薪酬体系</label>
+      <input class="wrap-ing" type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu5">人力资源</label>
   </div>
 
+<div class="act_form_con_2 clearfix">
+  <input  type="radio" name="payMethod" value="1"  id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
+  <input  type="radio" name="payMethod" value="2" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
+  <input type="radio" name="payMethod" value="3" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
+  <input  type="radio" name="payMethod" value="4" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
+  <input type="radio" name="payMethod" value="5" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
+</div>
   <div style="margin-top: 40px">
     <h1><div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;"></div>问题简述</h1>
     <div class="act_form_xian"></div>
