--- a/views/act_form.html
+++ b/views/act_form.html
@@ -121,6 +121,12 @@
   <div style="margin-top: 40px">
     <h1><div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;"></div>上传建议附件</h1>
     <div class="act_form_xian"></div>
+    <div class="attachment_box">
+      <form id="attachmentForm">
+        <input id="attachment" type="file" multiple="multiple" name="attachment" style="display: none;"/>
+        <label for="attachment" class="attach-upload-btn"><i class="iconfont">&#xe616;</i></label>
+      </form>
+    </div>
   </div>
 
 </div>
@@ -135,6 +141,8 @@
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/attachment.js"></script>
 <script>
   $("#gerenjieshao").on("keyup",function(){
   var strLength = $.trim($(this).val()).length;
@@ -144,6 +152,63 @@
     this.value  = this.value.substring(0, 80);
   }
 });
+</script>
+<script>
+  $(function () {
+    var login_ss = null;
+    if($.cookie('login_ss') != undefined){
+      login_ss = JSON.parse($.cookie('login_ss'));
+    }
+    var params = {
+      uid: login_ss.uid,
+      maxfileNum:1,
+      fileInput: $("#attachment").get(0),
+      url: ajaxUrlPrefix.nodeapi + "/cmsapi/input_upload",
+      filter: function(files) {
+        console.log('filter');
+        if(files.length > ZXXFILE.maxfileNum){
+          layer.msg('最多上传'+ZXXFILE.maxfileNum+'个文件');
+          return false;
+        }
+        var arrFiles = [];
+        for (var i = 0, file; file = files[i]; i++) {
+          arrFiles.push(file);
+        }
+        return arrFiles;
+      },
+      onSelect: function(files) {
+        console.log('onSelect',files)
+        if (files.length <= 0) return;
+        for(var i =0;i<files.length;i++) {
+          console.log(files[0])
+          var reader = new FileReader();
+          reader.readAsDataURL(files[0]);
+        }
+      },
+      onProgress: function(file, loaded, total) {
+        var percent = '头像正在上传……';
+        $(".upload_append_list[data-index="+ZXXFILE.num+"]").each(function(){
+          if($(this).attr('data-file') == file.name){
+
+          }
+        });
+      },
+      onSuccess: function(file, response) {
+        console.log('onSuccess',response);
+        var res = JSON.parse(response);
+        if (res.errno === 0) {
+
+        } else {
+          $('#loading').hide();
+        }
+      },
+      onFailure: function(file) {
+        console.log(file)
+      }
+    };
+    ZXXFILE = $.extend(ZXXFILE, params);
+    ZXXFILE.init();
+  })
 </script>
 </body>
 </html>
