--- a/views/act_form.html
+++ b/views/act_form.html
@@ -20,6 +20,18 @@
    margin-right: 175px;
    margin-top: 10px;
  }
+ .act_form_con label{
+   font-weight: normal;
+   margin-left: 40px;
+   margin-right: 130px;
+   margin-top: 10px;
+ }
+ .act_form_con_3 label{
+   font-weight: normal;
+   margin-left: 60px;
+   margin-right: 130px;
+   margin-top: 10px;
+ }
 
  input[type="radio"]:checked+label {color: red;}
 
@@ -53,6 +65,8 @@
    padding: 2px;
    color: #d31d2c;
  }
+
+ .act_form_con_2 input[type="radio"]:checked+label, .act_form_con_2 label {color: #fff;}
  .act_form_con_2 input[type="radio"] + label:before {
    content: "\a0"; /*不换行空格*/
    display: inline-block;
@@ -62,7 +76,7 @@
    height: 14px;
    margin-right: 10px;
    border-radius: 50%;
-   border: 1px solid #958c87;
+   border: 1px solid #fff;
    font-weight: normal;
    line-height: 1;
 
@@ -77,8 +91,40 @@
    height: 9px;
    margin-right: 10px;
    border-radius: 50%;
-   border: 1px solid #d31d2c;
-   background-color: #d31d2c;
+   border: 1px solid #fff;
+   background-color: #fff;
+   background-clip: content-box;
+   padding: 2px;
+   color: #d31d2c;
+ }
+
+ .act_form_con_3 input[type="radio"]:checked+label, .act_form_con_3 label {color: #fff;}
+ .act_form_con_3 input[type="radio"] + label:before {
+   content: "\a0"; /*不换行空格*/
+   display: inline-block;
+   vertical-align: middle;
+   font-size: 18px;
+   width: 14px;
+   height: 14px;
+   margin-right: 10px;
+   border-radius: 50%;
+   border: 1px solid #fff;
+   font-weight: normal;
+   line-height: 1;
+
+ }
+
+ .act_form_con_3 input[type="radio"]:checked + label:before {
+   content: "\a0"; /*不换行空格*/
+   display: inline-block;
+   vertical-align: middle;
+   font-size: 18px;
+   width: 10px;
+   height: 9px;
+   margin-right: 10px;
+   border-radius: 50%;
+   border: 1px solid #fff;
+   background-color: #fff;
    background-clip: content-box;
    padding: 2px;
    color: #d31d2c;
@@ -144,15 +190,22 @@
       <input class="wrap-ing" type="radio" name="payMethod" value="2" id="liu2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu2">市场营销</label>
       <input class="wrap-ing" type="radio" name="payMethod" value="3" id="liu3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu3">管理体系</label>
       <input class="wrap-ing" type="radio" name="payMethod" value="4" id="liu4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu4">薪酬体系</label>
-      <input class="wrap-ing" type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu5">人力资源</label>
+      <input class="wrap-ing" type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0;margin-left: 0;" for="liu5">人力资源</label>
   </div>
 
-<div class="act_form_con_2 clearfix">
-  <input  type="radio" name="payMethod" value="1"  id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
-  <input  type="radio" name="payMethod" value="2" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
-  <input type="radio" name="payMethod" value="3" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
-  <input  type="radio" name="payMethod" value="4" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
-  <input type="radio" name="payMethod" value="5" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
+<div class="act_form_con_2 clearfix" style="background:url({{helper.cdnhost}}/assets/img/act_back.png);background-size:cover;height: 50px;line-height: 38px;">
+  <input  type="radio" name="pay" value="1" checked="checked" id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
+  <input  type="radio" name="pay" value="2" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
+  <input type="radio" name="pay" value="3" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
+  <input  type="radio" name="pay" value="4" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
+  <input type="radio" name="pay" value="5" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
+</div>
+
+<div class="act_form_con_3 clearfix" style="background:url({{helper.cdnhost}}/assets/img/act_back1.png);background-size:cover;height: 50px;line-height: 38px;display: none;">
+  <input  type="radio" name="pay1" value="1" checked="checked" id="liu-2-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-1">交互设计</label>
+  <input  type="radio" name="pay1" value="2" id="liu-2-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-2-2">专题设计</label>
+  <input type="radio" name="pay1" value="3" id="liu-2-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-3">营销文案策划</label>
+  <input  type="radio" name="pay1" value="4" id="liu-2-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-4">前端设计</label>
 </div>
   <div style="margin-top: 40px">
     <h1><div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;"></div>问题简述</h1>
