--- a/views/act_form.html
+++ b/views/act_form.html
@@ -9,15 +9,14 @@
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
 <style>
  .act_form {
-   width: 1180px;
-   height: 400px;
+   width: 1120px;
    background: #ffffff;
    margin: 0 auto;
    margin-top: 20px;
  }
  label{
    font-weight: normal;
-   margin-right: 175px;
+   margin-right: 155px;
    margin-top: 10px;
  }
 
@@ -93,11 +92,14 @@
     height: 40px;
   }
 #gerenjieshao {
-  width: 1140px;
-  margin: 20px;
+  width: 1052px;
+  margin: 30px;
+  height: 188px;
+  background: #f8f8f8;
+  border: 0;
 }
   .act_form_xian {
-    width: 1160px;
+    width: 1090px;
     height: 1px;
     border-bottom:1px solid #C13232 ;
     border-top:1px solid #C13232;
@@ -105,8 +107,8 @@
   }
  .word-num {
    position: absolute;
-   right: 90px;
-   top: 200px;
+   right: 55px;
+   top: 188px;
    z-index: 100;
    color: #666;
  }
@@ -119,67 +121,65 @@
     background: red;
     margin-top: 22px;
   }
-
-
+  .content_title_bbb {
+    position: relative;
+  }
 </style>
 <!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/academy3.css"/>-->
 <script>
   var AD_PAGE_NAME = "PROFILE";
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<body style="background: #f5f5f5;">
-{% include "widget/top/top.html" %}
-
-{% import "widget/new_nav_first/common_nav.html" as common_nav %}
-{{ common_nav.common_nav(tdk,helper) }}
-
-<div class="act_form">
-  <h1>
-    <div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;">
-    </div>建议类型
-  </h1>
-  <div class="act_form_xian"></div>
-  <div class="act_form_con clearfix">
+<body >
+  {% include "widget/top/top.html" %}
+  {% import "widget/new_nav_first/common_nav.html" as common_nav %}
+  {{ common_nav.common_nav(tdk,helper) }}
+  <div style="width:100%;height:1574px;background-image: url({{helper.cdnhost}}/assets/img/gongkaixin.jpg);padding-top: 300px;background-repeat: no-repeat;background-size: 100% auto;padding-bottom:100px;" class="clearfix" >
+  <div class="act_form clearfix">
+    <img style="display:block;" src="{{helper.cdnhost}}/assets/img/bioadantiaojiao.png" alt="">
+    <h1>
+      <div style="width: 16px;margin-top: 5px;margin-right:8px;height: 20px; background: #C13232;float: left;">
+      </div>建议类型
+    </h1>
+    <div class="act_form_xian"></div>
+    <div class="act_form_con clearfix">
       <input class="wrap-ing" type="radio" name="payMethod" value="1" checked="checked" id="liu1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu1">技术相关</label>
       <input class="wrap-ing" type="radio" name="payMethod" value="2" id="liu2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu2">市场营销</label>
       <input class="wrap-ing" type="radio" name="payMethod" value="3" id="liu3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu3">管理体系</label>
       <input class="wrap-ing" type="radio" name="payMethod" value="4" id="liu4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu4">薪酬体系</label>
       <input class="wrap-ing" type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu5">人力资源</label>
-  </div>
-
-<div class="act_form_con_2 clearfix">
-  <input  type="radio" name="payMethod" value="1"  id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
-  <input  type="radio" name="payMethod" value="2" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
-  <input type="radio" name="payMethod" value="3" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
-  <input  type="radio" name="payMethod" value="4" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
-  <input type="radio" name="payMethod" value="5" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
-</div>
-  <div style="margin-top: 40px">
-    <h1><div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;"></div>问题简述</h1>
-    <div class="act_form_xian"></div>
-  </div>
-  <div class="content_title_bbb clearfix">
-    <textarea id="gerenjieshao" maxlength="500" data-geren="{{userinfo.introduce}}"></textarea>
-    <div class="word-num">还可以输入<span id="word-num">120</span>字</div>
-  </div>
-
-
-  <div style="margin-top: 40px">
-    <h1><div style="width: 10px;margin-top: 8px;margin-right:8px;height: 12px; background: #C13232;float: left;"></div>上传建议附件</h1>
-    <div class="act_form_xian"></div>
-    <div class="attachment_box">
-      <form id="attachmentForm">
-        <input id="attachment" type="file" multiple="multiple" name="attachment" style="display: none;"/>
-        <label for="attachment" class="attach-upload-btn"><i class="iconfont">&#xe616;</i></label>
-      </form>
     </div>
+
+    <div class="act_form_con_2 clearfix">
+      <input  type="radio" name="payMethod" value="1"  id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
+      <input  type="radio" name="payMethod" value="2" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
+      <input type="radio" name="payMethod" value="3" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
+      <input  type="radio" name="payMethod" value="4" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
+      <input type="radio" name="payMethod" value="5" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
+    </div>
+    <div>
+      <h1><div style="width: 16px;margin-top: 5px;margin-right:8px;height: 20px; background: #C13232;float: left;"></div>问题简述</h1>
+      <div class="act_form_xian"></div>
+    </div>
+    <div class="content_title_bbb clearfix">
+      <textarea id="gerenjieshao" maxlength="500" data-geren="{{userinfo.introduce}}"></textarea>
+      <div class="word-num">还可以输入<span id="word-num">120</span>字</div>
+    </div>
+
+
+    <div>
+      <h1><div style="width: 16px;margin-top: 5px;margin-right:8px;height: 20px; background: #C13232;float: left;"></div>上传建议附件</h1>
+      <div class="act_form_xian"></div>
+      <div class="attachment_box">
+        <form id="attachmentForm">
+          <input id="attachment" type="file" multiple="multiple" name="attachment" style="display: none;"/>
+          <label for="attachment" class="attach-upload-btn"><i class="iconfont">&#xe616;</i></label>
+        </form>
+      </div>
+    </div>
+
   </div>
-
 </div>
-
-
-
-{% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_PROFILE_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
