--- a/views/act_form.html
+++ b/views/act_form.html
@@ -14,7 +14,7 @@
    margin: 0 auto;
    margin-top: 20px;
  }
- .act_form_con label, .act_form_con_3 label{
+ .act_form_con_2 label{
    font-weight: normal;
    margin-right: 155px;
    margin-top: 10px;
