--- a/views/act_form.html
+++ b/views/act_form.html
@@ -258,7 +258,7 @@
 
   </div>
 </div>
-    {% include "widget/new_footer/common_footer.html" %}
+    <div style="width:100%;height:60px;background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;line-height: 60px;color: #fff;font-size: 14px;">点击此处查看招聘职位<i class="iconfont" style="padding: 0 5px;">&#xe636;</i><a href="http://special.zhaopin.com/bj/2015/jjl032714/job2.html?deptid=112034331" style="font-size: 20px;color: #fff;;">虚位以待</a></div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_PROFILE_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
