--- a/views/act_form.html
+++ b/views/act_form.html
@@ -195,6 +195,21 @@
   .content_title_bbb {
     position: relative;
   }
+  .act-form-btn{
+  	display: block;
+  	width:400px;
+  	height:40px;
+  	text-align:center;
+  	line-height: 40px;
+  	font-size: 18px;
+  	color:#fff;
+  	background:#c13232;
+  	border-radius: 5px;
+  	position: absolute;
+  	left:50%;
+  	margin-left: -200px;
+  	cursor: pointer;
+  }
 </style>
 <!--<link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/academy3.css"/>-->
 <script>
@@ -214,26 +229,26 @@
     </h1>
     <div class="act_form_xian"></div>
     <div class="act_form_con clearfix">
-      <input class="wrap-ing" type="radio" name="payMethod" value="1" checked="checked" id="liu1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu1">技术相关</label>
-      <input class="wrap-ing" type="radio" name="payMethod" value="2" id="liu2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu2">市场营销</label>
-      <input class="wrap-ing" type="radio" name="payMethod" value="3" id="liu3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu3">管理体系</label>
-      <input class="wrap-ing" type="radio" name="payMethod" value="4" id="liu4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu4">薪酬体系</label>
-      <input class="wrap-ing" type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0;margin-left: 0;" for="liu5">人力资源</label>
+      <input  type="radio" name="payMethod" value="1" checked="checked" id="liu1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu1">技术相关</label>
+      <input  type="radio" name="payMethod" value="2" id="liu2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu2">市场营销</label>
+      <input  type="radio" name="payMethod" value="3" id="liu3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu3">管理体系</label>
+      <input  type="radio" name="payMethod" value="4" id="liu4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu4">薪酬体系</label>
+      <input  type="radio" name="payMethod" value="5" id="liu5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0;margin-left: 0;" for="liu5">人力资源</label>
   </div>
 
-<div class="act_form_con_2 clearfix" style="background:url({{helper.cdnhost}}/assets/img/act_back.png);background-size:cover;height: 50px;line-height: 38px;">
-  <input  type="radio" name="pay" value="1" checked="checked" id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
-  <input  type="radio" name="pay" value="2" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
-  <input type="radio" name="pay" value="3" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
-  <input  type="radio" name="pay" value="4" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
-  <input type="radio" name="pay" value="5" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
+<div class="act_form_con_2 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back.png);background-size:cover;height: 50px;line-height: 38px;">
+  <input  type="radio" name="pay" value="11" checked="checked" id="liu-1-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-1">技术缺陷</label>
+  <input  type="radio" name="pay" value="12" id="liu-1-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-1-2">机制建议</label>
+  <input type="radio" name="pay" value="13" id="liu-1-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-3">ui设计</label>
+  <input  type="radio" name="pay" value="14" id="liu-1-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-1-4">页面排版</label>
+  <input type="radio" name="pay" value="15" id="liu-1-5"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="margin-right: 0" for="liu-1-5">技术优化</label>
 </div>
 
-<div class="act_form_con_3 clearfix" style="background:url({{helper.cdnhost}}/assets/img/act_back1.png);background-size:cover;height: 50px;line-height: 38px;display: none;">
-  <input  type="radio" name="pay1" value="1" checked="checked" id="liu-2-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-1">交互设计</label>
-  <input  type="radio" name="pay1" value="2" id="liu-2-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-2-2">专题设计</label>
-  <input type="radio" name="pay1" value="3" id="liu-2-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-3">营销文案策划</label>
-  <input  type="radio" name="pay1" value="4" id="liu-2-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-4">前端设计</label>
+<div class="act_form_con_3 clearfix act_form_con_child" style="background:url({{helper.cdnhost}}/assets/img/act_back1.png);background-size:cover;height: 50px;line-height: 38px;display: none;">
+  <input  type="radio" name="pay1" value="21" checked="checked" id="liu-2-1"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-1">交互设计</label>
+  <input  type="radio" name="pay1" value="22" id="liu-2-2"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="act_form_label" for="liu-2-2">专题设计</label>
+  <input type="radio" name="pay1" value="23" id="liu-2-3"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-3">营销文案策划</label>
+  <input  type="radio" name="pay1" value="24" id="liu-2-4"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu-2-4">前端设计</label>
 </div>
   <div style="margin-top: 20px">
     <h1><div style="width: 16px;margin-top: 8px;margin-right:8px;height: 20px; background: #C13232;float: left;"></div>问题简述</h1>
@@ -255,7 +270,9 @@
       <label for="attachment" class="attach_upload_btn"><i class="iconfont">&#xe616;</i></label>
       <div class="attach_item"></div>
     </div>
-
+  </div>
+  <div style="position: relative;">
+  	<span class="act-form-btn">提交建议</span>
   </div>
 </div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
@@ -301,6 +318,7 @@
     	$('.act_form_con_2').css("display", "none");
 		$('.act_form_con_3').css("display", "none");
 	})
+  	
 	$("#gerenjieshao").on("keyup",function(){
 		var strLength = $.trim($(this).val()).length;
 	    $("#word-num").html(80-strLength);
@@ -365,34 +383,45 @@
     };
     ZXXFILE = $.extend(ZXXFILE, params);
     ZXXFILE.init();
-    
-    $.ajax({
-        url: '/save_feedback',
-        type:'POST',
-        data:{
-            uid:login_ss.uid,
-            phone:login_ss.username,
-            nickname:login_ss.nickname,
-            type_id:1,
-            child_id:11,
-            description:'thl',
-            file_url:'www.baidu.com'
-        },
-        dataType:'json',
-        async: false,
-        success:function(result){
-            console.log(result)
-            if(result.code == 0){
-            	layer.msg('提交成功')
-            }else{
-              layer.msg('系统繁忙，请稍后重试')
-            }
-        },
-        error:function(XMLHttpRequest, textStatus, errorThrown){
-            console.log(errorThrown)
-        }
-    });
+    $(".act-form-btn").on('click',function(){
+    	var type_id = $('.act_form_con input[checked=checked]').val();
+    	console.log(type_id)
+    	var child_id =$(".act_form_con_child").eq(type_id).find('input[checked=checked]').val();
+    	console.log(child_id)
+    	if($("#gerenjieshao").val()==''){
+    		layer.msg("请填写问题描述");
+          	return false;
+    	}
 
+    	$.ajax({
+	        url: '/save_feedback',
+	        type:'POST',
+	        data:{
+	            uid:login_ss.uid,
+	            phone:login_ss.username,
+	            nickname:login_ss.nickname,
+	            type_id:type_id,
+	            child_id:child_id,
+	            description:$("#gerenjieshao").val(),
+	            file_url: $('.attach_item').text()
+	        },
+	        dataType:'json',
+	        async: false,
+	        success:function(result){
+	            console.log(result)
+	            if(result.code == 0){
+	            	layer.msg('提交成功')
+	            }else{
+	              layer.msg('系统繁忙，请稍后重试')
+	            }
+	        },
+	        error:function(XMLHttpRequest, textStatus, errorThrown){
+	            console.log(errorThrown)
+	        }
+	    });
+
+    });
+   
   })
 </script>
 </body>
